# RaiderSTREAM

./: .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  FIXME.txt  FLAGS.txt  Makefile  Makefile.bk  README.md  STREAM_MULTI_TESTING.o6176351  TODO.txt  ]  arraygen.c  build.sh  clean.sh  debug_notes.txt  nocona_single_core_caching_test.sh  nocona_single_core_test_ompi.sh  nocona_stream_slurm_script.sh  report1.qdrep  run.sh  run_all.sh  run_compiletime.sh  run_runtime.sh  single_core_test.sh  single_core_test_intel.sh  stream_slurm_script.sh  test_build.sh  thor_single_core_caching_test.sh  thor_single_core_test_ompi.sh  thor_stream_slurm_script.sh  todo.txt
.github/performance_evaluation/scripts/: thor_single_core_ompi.sh  thor_stream_slurm_script.sh
arraygen/: arraygen.sh
include/RaiderSTREAM/: CMakeLists.txt  RSBaseImpl.h  RSOpts.h  RaiderSTREAM.h  validation.h
mpi/: OLD_stream_mpi.c  original_stream_mpi.c  print_memusage.c  run_stream_mpi.sh  stream_mpi  stream_mpi.c  stream_mpi_original.c
openmp/: OLD_stream_openmp.c  compile_run.sh  stream_openmp.c
openshmem/: OLD_stream_openshmem.c  run_stream_openshmem.sh  stream_openshmem.c
outputs/: single_core_output_04-06-22_08:18:19.txt  single_core_output_04-06-22_08:28:35.txt  single_core_output_04-06-22_08:29:18.txt  single_core_output_04-06-22_08:34:12.txt  single_core_output_04-06-22_08:34:59.txt  single_core_output_04-06-22_08:36:17.txt  single_core_output_04-06-22_08:37:28.txt  single_core_output_04-06-22_08:38:33.txt  single_core_output_04-06-22_08:40:47.txt  single_core_output_04-06-22_08:41:27.txt  single_core_output_04-06-22_10:08:10.txt  single_core_output_04-06-22_10:23:47.txt  single_core_output_04-06-22_10:24:33.txt  single_core_output_04-06-22_10:24:45.txt  single_core_output_04-06-22_10:26:20.txt  single_core_output_04-06-22_10:49:20.txt  single_core_output_04-06-22_10:50:17.txt  single_core_output_04-06-22_10:53:32.txt  single_core_output_04-06-22_10:55:18.txt  single_core_output_04-06-22_10:56:20.txt  single_core_output_04-06-22_10:59:10.txt  single_core_output_04-06-22_11:03:54.txt  single_core_output_04-06-22_11:08:36.txt  single_core_output_04-06-22_11:10:16.txt  single_core_output_04-06-22_11:12:27.txt  single_core_output_06-06-22_10:58:14.txt  single_core_output_06-06-22_11:03:58.txt  single_core_output_06-06-22_11:23:42.txt  single_core_output_06-06-22_11:29:04.txt  single_core_output_06-06-22_11:33:17.txt  single_core_output_06-06-22_12:03:35.txt  single_core_output_06-06-22_12:06:58.txt  single_core_output_06-06-22_12:08:57.txt  single_core_output_06-06-22_12:10:29.txt  single_core_output_06-06-22_12:40:17.txt  single_core_output_06-06-22_12:41:55.txt  single_core_output_06-06-22_12:45:37.txt  single_core_output_07-06-22_11:00:03.txt  single_core_output_07-06-22_11:00:48.txt  single_core_output_07-06-22_11:02:47.txt  (+10 more)
performance_evaluation/scripts/: nocona_single_core_caching.sh  nocona_single_core_ompi.sh  nocona_stream_slurm.sh  thor_single_core_caching.sh
src/: stream_mpi.c  stream_openmp.c  stream_openshmem.c  stream_original.c
src/RaiderSTREAM/: CMakeLists.txt  RSOpts.cpp  RS_Main.cpp  RS_Opts.cpp
src/RaiderSTREAM/Arraygen/: arraygen.c
src/RaiderSTREAM/Impl/: CMakeLists.txt
src/RaiderSTREAM/Impl/RS_CUDA/: .reference.cu  CMakeLists.txt  RS_CUDA.cu  RS_CUDA.cuh  RS_CUDA_IMPL.cu
src/RaiderSTREAM/Impl/RS_MPI_CUDA/: CMakeLists.txt
src/RaiderSTREAM/Impl/RS_MPI_OMP/: CMakeLists.txt  RS_MPI_OMP.cpp  RS_MPI_OMP.h  RS_MPI_OMP_IMPL.c
src/RaiderSTREAM/Impl/RS_OACC/: CMakeLists.txt  RS_OACC.cpp  RS_OACC.h  RS_OACC_IMPL.c
src/RaiderSTREAM/Impl/RS_OMP/: CMakeLists.txt  RS_OMP.cpp  RS_OMP.h  RS_OMP_IMPL.c
src/RaiderSTREAM/Impl/RS_OMP/.RS_OMP.bk/: RS_OMP.h  RS_OMP_IMPL.c
src/RaiderSTREAM/Impl/RS_OMP_TARGET/: CMakeLists.txt  RS_OMP_TARGET.cpp  RS_OMP_TARGET.h  RS_OMP_TARGET_IMPL.c
src/RaiderSTREAM/Impl/RS_OPENSHMEM/: CMakeLists.txt
src/RaiderSTREAM/Impl/RS_SHMEM_CUDA/: CMakeLists.txt  RS_SHMEM_CUDA.cu  RS_SHMEM_CUDA.cuh  RS_SHMEM_CUDA_IMPL.cu
src/RaiderSTREAM/Impl/RS_SHMEM_OACC/: CMakeLists.txt  RS_SHMEM_OACC.cpp  RS_SHMEM_OACC.h  RS_SHMEM_OACC_IMPL.c
src/RaiderSTREAM/Impl/RS_SHMEM_OMP/: CMakeLists.txt  RS_SHMEM_OMP.cpp  RS_SHMEM_OMP.h  RS_SHMEM_OMP_IMPL.c
src/RaiderSTREAM/Impl/RS_SHMEM_OMP_TARGET/: CMakeLists.txt  RS_SHMEM_OMP_TARGET.cpp  RS_SHMEM_OMP_TARGET.h  RS_SHMEM_OMP_TARGET_IMPL.c
src/cuda/: stream_cuda.cu  stream_cuda.cuh  stream_cuda_kernels.cuh  stream_cuda_output.cuh  stream_cuda_tuned.cuh  stream_cuda_validation.cuh
src/cuda-mpi/: stream_cuda.cu  stream_cuda.cuh  stream_cuda_output.cuh  stream_cuda_tuned.cuh  stream_cuda_validation.cuh
src/include/: CMakeLists.txt
src/include/RaiderSTREAM/: RSBaseImpl.h  RSOpts.h  RaiderSTREAM.h
src/mpi/: stream_mpi.c  stream_mpi.h  stream_mpi_output.h  stream_mpi_tuned.h  stream_mpi_validation.h
src/openmp/: OLD_stream_openmp.c  scratch.c  stream_openmp.c  stream_openmp.h  stream_openmp_output.h  stream_openmp_tuned.h  stream_openmp_validation.h
src/openmp/tests/: expected_output.txt  lscpu.txt  test_summaries.txt
src/openmp/tests/test1/: openmp_test1.c  test1_output.txt
src/openmp/tests/test2/: openmp_test2.c  test2_output.txt
src/openmp/tests/test3/: openmp_test3.c
src/openshmem/: stream_openshmem.c  stream_openshmem.h  stream_openshmem_output.h  stream_openshmem_tuned.h  stream_openshmem_validation.h
tests/: check_idx_arrays.c  idx_arrays.c
